project/test/semantics/unit/bad/Bad35_shouldReturnBodyEmptyErrorForActions.ty
mutable class SomeMutableClass {

    values: {
        total: Int;
        count: Int;
        name: String = "Some name";
    }
    
    variables: {
        var1: Int = 1;
        var2: String = "S";
    }
    
    functions: {
        goodFunction: () -> Int = 50
    }
    
    actions: {
        goodAction: (x: Int, y: String) -> Int = {
            val z: Int = 4;
            z
        }
        
        badAction: (arg1: Bool, arg2: Int, arg3: Int) -> Int = {
        } // BodyEmptyError
    }
}

singleton class Main {
    
    actions: {
        main: () -> Void = Pass
    }
}
